# postlice

./: .gitmodules  Cargo.toml  shell.nix
.direnv/: nix-profile-pre868392.e9f00bd89398  nix-profile-pre868392.e9f00bd89398.rc
data/: geo-data.json
src/: add_screen.rs  database.rs  geo_data.rs  home_screen.rs  lib.rs  main.rs
